# ros2_ws

./: .gitignore  README.md
src/autonomous_car_description/: CMakeLists.txt  README.md  package.xml
src/autonomous_car_description/launch/: display.launch.py
src/autonomous_car_description/urdf/: simple_car.urdf
src/autonomous_car_gazebo/: CMakeLists.txt  README.md  package.xml
src/autonomous_car_gazebo/launch/: spawn_car.launch.py
src/gazebo_worlds/: CMakeLists.txt  README.md  package.xml
src/gazebo_worlds/launch/: gazebo_world.launch.py
src/gazebo_worlds/worlds/: empty.world  indoor.world  outdoor.world
src/mycobot_ros2/mycobot_gazebo/: package.xml
src/mycobot_ros2/mycobot_moveit_config/: package.xml
src/robotic_arm_description/: CMakeLists.txt  README.md  package.xml
src/robotic_arm_description/launch/: display.launch.py
src/robotic_arm_description/urdf/: simple_arm.urdf
src/robotic_arm_gazebo/: CMakeLists.txt  README.md  package.xml
src/robotic_arm_gazebo/launch/: spawn_arm.launch.py
